--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "agate": "umeboshi2/agate",
     "amd-define-factory-patcher-loader": "^1.0.0",
     "backbone": "^1.3.3",
+    "backbone.eventrouter": "^0.3.0",
     "backbone.marionette": "^3.2.0",
     "backbone.paginator": "^2.0.5",
     "bootstrap": "^3.3.7",
