--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "main": "index.js",
   "dependencies": {},
   "devDependencies": {
-    "agate": "umeboshi2/agate",
     "amd-define-factory-patcher-loader": "^1.0.0",
     "backbone": "^1.3.3",
     "backbone.eventrouter": "^0.3.0",
@@ -34,6 +33,7 @@
     "shelljs": "^0.7.7",
     "stats-webpack-plugin": "^0.5.0",
     "style-loader": "^0.13.2",
+    "tbirds": "^0.2.1",
     "teacup": "^2.0.0",
     "underscore": "^1.8.3",
     "webpack": "^2.2.1",
